@@ -1,5 +1,7 @@
 * New API function PEP_STATUS_is_error.
   Closes https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/111 .
+* Avoid the use of #warning, not supported by the microsoft compiler.
+  Closes https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/122 .
 
 v3.2.0-RC21  2023-02-01
 * DEPENDENCIES: use the new pEpEngineSequoiaBackend release; this includes some
